# SCLIP

./: .gitignore  LICENSE
apps/sidecar/: .env  README.md  config.py  pyproject.toml  regenerate_transition_previews.py  requirements.txt  requirements_rag_mcp.txt  sclips.db
apps/sidecar/app/: __init__.py  main.py
apps/sidecar/app/api/: __init__.py
apps/sidecar/app/core/: ai_agent.py  architecture.md  context_manager.py  cqrs_pattern.py  dependency_injection.py  event_driven.py  observability.py  professional_handler.py  resilience.py  streaming_communication.py  true_ai_agent.py  video_orchestrator.py
apps/sidecar/app/database/: __init__.py  connection.py  models.py
apps/sidecar/app/models/: __init__.py  preferences.py  session.py  user.py
apps/sidecar/app/orchestrator/: __init__.py  agentic_workflow.py  message_handler.py  sclip_brain.py  state_machine.py  streaming_manager.py
apps/sidecar/app/services/: __init__.py  google_search.py  media_downloader.py  pexels_api.py  rag_service.py  runware_image_generator.py
apps/sidecar/app/tests/: test_api_phase3.py  test_backend_phase1.py  test_tools_phase2.py
apps/sidecar/app/tools/: __init__.py  base_tool.py  broll_finder.py  broll_finder_simple.py  enhanced_mcp.py  mcp_protocol.py  project_scanner.py  registry.py  script_writer.py  video_processor.py  video_viewer.py  (+1 more)
apps/sidecar/context_storage/: test_debug_2abe4c65.json  test_detailed_4026a819.json  test_full_076356c9.json  test_memory_775bc9a8.json  test_simple_0c182f47.json  test_simple_5fdb4f8b.json
apps/sidecar/rag_storage/: chroma.sqlite3
(+68 files in other folders)
