[tool.poetry]
name = "sclips-sidecar"
version = "0.1.0"
description = "Sclips video processing sidecar server"
authors = ["Sclips Team <your-email@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.111.0,<0.112.0"
uvicorn = ">=0.30.1,<0.31.0"
pillow = "^11.3.0"
# Core dependencies from plan
websockets = "^12.0"
sqlalchemy = "^2.0.23"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-multipart = "^0.0.7"
aiofiles = "^23.2.1"
# Additional dependencies for enhanced functionality
alembic = "^1.13.0"
psycopg2-binary = "^2.9.9"
redis = "^5.0.1"
httpx = "^0.25.0"
python-dotenv = "^1.0.0"
structlog = "^23.2.0"
aiohttp = "^3.12.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
